# Codes

./: README.md
Scripts/Powershell/: learning.bat  learning.ps1  readme.md  replaceString.ps1  workspace.ps1
cmake/: readme.md
cplusplus/: Cat.cpp  Cat.h  check01.cppcheck  helloworld.cpp  helloworld.ilk
cplusplus/Debug/: helloworld.ilk
cplusplus/check01-cppcheck-build-dir/: ConsoleApplication1.a1  ConsoleApplication1.a2  ConsoleApplication1.a3  ConsoleApplication1.a4  files.txt  lastResults.xml  statistics.txt
cplusplus/desktop19/: desktop19.sln
cplusplus/desktop19/desktop19/: Resource.h  desktop19.cpp  desktop19.rc  desktop19.vcxproj  desktop19.vcxproj.filters
cplusplus/desktop19/desktop19/Debug/: desktop19.exe.recipe  desktop19.res  vc142.idb
cplusplus/learn_boost/follow_boost_org/: follow_boost_org.sln
cplusplus/learn_boost/follow_boost_org/Helloboost/: Helloboost.cpp  Helloboost.vcxproj  Helloboost.vcxproj.filters  pch.h
cplusplus/learn_boost/follow_boost_org/follow_boost_org/: follow_boost_org.cpp  follow_boost_org.vcxproj  follow_boost_org.vcxproj.filters
cplusplus/ubuntu_cpp/: hello  hello.cc
cplusplus/vc/: readme.md
cplusplus/vc/ConsoleApplication1/: ConsoleApplication1.sln
cplusplus/vc/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj
cpp20/: CMakeLists.txt  main.cpp  readme.txt  rect.cpp  rect.h  square.h  test_cmake.cpp
cpp20/demo/: CMakeLists.txt
cpp20/demo/inc/: head1.h
cpp20/demo/libssrc/: CMakeLists.txt
projects/: readme.txt
projects/helloworld/: helloworld.ilk
(+39 files in other folders)
